fix: change getFirst() to get(0)